--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-1.selenium
-2.webdriver-manager
-3.beautifulsoup4
-4.pandas
-5.openpyxl
+Requirements
+Before running the scraper, install the required dependencies:
 
+pip install selenium
+pip install webdriver-manager
+pip install beautifulsoup4
+pip install pandas
